# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml
app/: config.py
src/: api.py  book_names.py  config.py  db.py  extractors.py  loaders.py  main.py  models.py  openapi.json  text_utils.py
src/db/: session.py
src/extractors/: __init__.py
tests/: test_health.py
